force-app/main/default/objects/Certificate__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <formula>/*Service_Appointment__r.DueDate*/
if( Contains(Service_Appointment__r.Product_Name__c, &apos;OL - JHSCI&apos;),
  if( NOT(ISBLANK(Attendee__r.Completion_Date__c)),
   Attendee__r.Completion_Date__c,
   DATEVALUE(Service_Appointment__r.SchedEndTime)
  ),
   DATEVALUE(Service_Appointment__r.SchedEndTime)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>