force-app/main/default/objects/Certificate__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <formula>IF(
  AND(
    MONTH( Completion_Date__c ) = 2,
    DAY( Completion_Date__c ) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Completion_Date__c ) + Service_Appointment__r.Product__r.Certificate_Length__c, 400 ) = 0, 
        AND( 
          MOD( YEAR( Completion_Date__c ) + Service_Appointment__r.Product__r.Certificate_Length__c, 4 ) = 0,
          MOD( YEAR( Completion_Date__c ) + Service_Appointment__r.Product__r.Certificate_Length__c, 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Completion_Date__c ) + Service_Appointment__r.Product__r.Certificate_Length__c, 3, 1),
  DATE( YEAR( Completion_Date__c ) + Service_Appointment__r.Product__r.Certificate_Length__c, MONTH( Completion_Date__c ), DAY( Completion_Date__c ) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>