force-app/main/default/objects/Certificate__c/fields/Recipient_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Company_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recipient Company Name</label>
    <type>Text</type>
</CustomField>