force-app/main/default/objects/Certificate__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName</formula>
    <label>Recipient Name</label>
    <type>Text</type>
</CustomField>