force-app/main/default/objects/Certificate__c/validationRules/Contact_And_Attendee_Must_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_And_Attendee_Must_Match</fullName>
    <active>true</active>
    <errorConditionFormula>not( Attendee__r.Contact__r.Id =  Contact__r.Id )</errorConditionFormula>
    <errorMessage>Attendee Contact Field Must Match Certificate Contact</errorMessage>
</ValidationRule>