force-app/main/default/objects/Certificate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendee__c</columns>
    <columns>Contact__c</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Company_Name__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>